--- a/public/views/about.html
+++ b/public/views/about.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h2 class="text-center my-5">Get in touch</h2>
-    <div class="row card col-md-8">
+    <div class="mx-auto card col-md-8">
         <form class="card-block">
             <div class="row">
                 <div class="col-md-6">
