--- a/views/index.html
+++ b/views/index.html
@@ -3,18 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="https://mt.googleapis.com/vt/icon/name=icons/onion/1494-wht-circle-blank-4x.png&filter=ff06f06f">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./libs/bootstrap.min.css">
-    <script src="./libs/angular.min.js"></script>
-    <script src="./libs/angular-route.min.js"></script>
-    <script src="./js/app.js"></script>
-    <script src="./js/services/task.service.js"></script>
-    <script src="./js/controllers/app.controller.js"></script>
-    <script src="./js/controllers/task.controller.js"></script>
-    <script src="./js/routes/routes.js"></script>
-    <script src="./js/directives/directives.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <title>MEAN App</title>
 </head>
 
@@ -25,6 +18,15 @@
     </div>
     <navbar></navbar>
     <ng-view class="main"></ng-view>
+    <script src="./libs/angular.min.js"></script>
+    <script src="./libs/angular-route.min.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/services/task.service.js"></script>
+    <script src="./js/controllers/app.controller.js"></script>
+    <script src="./js/controllers/task.controller.js"></script>
+    <script src="./js/routes/routes.js"></script>
+    <script src="./js/directives/directives.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </body>
 
 </html>
