--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./libs/bootstrap.min.css">
     <title>MEAN App</title>
+    <base href="/">
 </head>
 
 <body ng-app="AppModule" ng-controller="AppController">
