revamped homepage, updated about page, renamed site

--- a/public/views/about.html
+++ b/public/views/about.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 class="text-center my-5">Get in touch</h2>
+    <h1 class="text-center my-5">Get in touch</h1>
     <div class="mx-auto card col-md-8">
         <form class="card-block">
             <div class="row">
@@ -26,40 +26,16 @@
 <footer class="mt-5">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 py-3">
-                <h4>About us</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor</p>
+            <div class="col-md-6 py-3">
+                <h3>What is this?</h3>
+                <p>Adding tasks to do in this list. As simple as that. </p>
             </div>
-            <div class="col-md-4 py-3">
-                <h4>Do you like it ? Share this !</h4>
-                <div>
-                    <!-- <p>
-                        <a href="https://www.twitter.com" class="fa-icon" title="">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a>
-                        <a href="https://www.facebook.com" class="fa-icon" title="">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                        </a>
-                        <a href="https://www.linkedin.com" class="fa-icon" title="">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                        </a>
-                    </p> -->
-                </div>
+            <div class="col-md-6 py-3">
+                <h3>Do you like it ? Share this now!</h3>
                 <div>
                     <p>
-                        <small>© MEAN App | Website created by Aakash Rastogi</small>
+                        © Rastogi's Task List | Created by Aakash Rastogi (<a href="https://github.com/aakashrstg00">me</a>, <a href="https://aakashrstg00.github.io">yes me!</a>)
                     </p>
-                </div>
-            </div>
-            <div class="col-md-4 py-3">
-                <h4>Subscribe to newsletter</h4>
-                <div class="form-group">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Email">
-                        <div class="input-group-btn">
-                            <button type="button" class="btn btn-default btn-newsletter ">OK</button>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
