--- a/views/index.html
+++ b/views/index.html
@@ -8,13 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./libs/bootstrap.min.css">
-    <title>MEAN App</title>
+    <title>Rastogi's Task List</title>
     <base href="/">
 </head>
 
 <body ng-app="AppModule" ng-controller="AppController">
     <div class="alert alert-warning text-center my-0" ng-show="error">
-        <strong class="display-4">SERIOUS ERROR</strong>
+        <strong class="display-4">Something went wrong!</strong>
         <br>We recommend you not to use website during this period.
     </div>
     <navbar></navbar>
